# PokeDeskie

./: .env.example  BOT.py  Config.json  PokeDex.json  Profile.db  Profile.db-shm  Profile.db-wal  README.md  Trades.json  bot.py  config.py  database.py  legacy_bot.py  pyproject.toml  requirements.txt  start.sh  utils.py
cogs/: admin.py  events.py  gambling.py  help.py  pokemon.py
