[project]
name = "pokedeskie"
version = "2.0.0"
description = "A comprehensive Discord bot for Pokemon enthusiasts with gambling features, Pokemon information lookup, and trade tracking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "py-cord>=2.6.1",
    "discord-py>=2.3.0",
    "flask>=3.1.1",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "discord-webhook>=1.3.0",
    "asyncio-throttle>=1.0.2",
    "dotenv>=0.9.9",
    "pillow>=11.2.1",
    "matplotlib>=3.10.3",
]

[project.scripts]
pokedeskie = "bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogs"]
